--- a/FinanceManager/Pages/MainPage.xaml
+++ b/FinanceManager/Pages/MainPage.xaml
@@ -8,6 +8,7 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
-
+        <TextBox x:Name="textBox" Margin="29,48,26,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top"/>
+        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="29,116,0,0" VerticalAlignment="Top" Width="345" Click="button_Click"/>
     </Grid>
 </Page>
