--- a/FinanceManager/Pages/MainPage.xaml
+++ b/FinanceManager/Pages/MainPage.xaml
@@ -5,10 +5,11 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    Background="Teal">
 
     <Grid>
-        <TextBox x:Name="textBox" Margin="29,48,26,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" PlaceholderText="Currency name"/>
-        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="29,116,0,0" VerticalAlignment="Top" Width="345" Click="button_Click"/>
+        <TextBox x:Name="Name" Margin="29,48,26,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" PlaceholderText="Currency name"/>
+        <TextBox x:Name="Value" Margin="29,108,26,0" InputScope="Number" TextWrapping="Wrap" Text="" VerticalAlignment="Top" PlaceholderText="Value"/>
+        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="29,168,0,0" VerticalAlignment="Top" Width="345" Click="button_Click"/>
     </Grid>
 </Page>
