--- a/FinanceManager/Pages/MainPage.xaml
+++ b/FinanceManager/Pages/MainPage.xaml
@@ -9,7 +9,7 @@
     Background="Teal"
     DataContext="{Binding MainViewModel, Source={StaticResource ViewModelLocator}}">
     <Page.Resources>
-        <viewModel:ViewModelLocator x:Key="ViewModelLocator" x:Name="ViewModelLocator"></viewModel:ViewModelLocator>
+        <viewModel:ViewModelLocator x:Key="ViewModelLocator" ></viewModel:ViewModelLocator>
     </Page.Resources>
 
 
@@ -18,5 +18,6 @@
         <TextBox x:Name="Name" Margin="29,48,26,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" PlaceholderText="{Binding TEST}"/>
         <TextBox x:Name="Value" Margin="29,108,26,0" InputScope="Number" TextWrapping="Wrap" Text="" VerticalAlignment="Top" PlaceholderText="Value"/>
         <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="29,168,0,0" VerticalAlignment="Top" Width="345" Click="button_Click"/>
+        <Button x:Name="button1" Content="Move" HorizontalAlignment="Left" Margin="149,226,0,0" VerticalAlignment="Top" Command="{Binding Move}"/>
     </Grid>
 </Page>
