--- a/FinanceManager/Pages/Currencies.xaml
+++ b/FinanceManager/Pages/Currencies.xaml
@@ -1,19 +1,13 @@
 ﻿<Page
-    x:Class="FinanceManager.Pages.EditExpenseCategory"
+    x:Class="FinanceManager.Pages.Currencies"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:FinanceManager.Pages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:helpers="using:FinanceManager.Helpers"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-    DataContext="{Binding Source={StaticResource ViewModelLocator}, Path=CategoriesViewModel}">
-    <Page.Resources>
-        <ResourceDictionary>
-            <helpers:BooleanToVisibilityConverter x:Name="BooleanToVisibilityConverter"/>
-        </ResourceDictionary>
-    </Page.Resources>
+    DataContext="{Binding Source={StaticResource ViewModelLocator}, Path=CurrenciesViewModel}">
 
     <!--Bottom Application Bar -->
     <Page.BottomAppBar>
@@ -24,7 +18,7 @@
             </CommandBar.PrimaryCommands>
         </CommandBar>
     </Page.BottomAppBar>
-    
+
     <!-- Grid markup -->
     <Grid>
         <Grid.ChildrenTransitions>
@@ -39,17 +33,17 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        
+
         <!-- Title Panel -->
         <StackPanel Grid.Row="0" Margin="19,0,0,0">
             <TextBlock Text="MY APPLICATION" Style="{ThemeResource TitleTextBlockStyle}" Margin="0,12,0,0"/>
-            <TextBlock Text="Edit expense" Margin="0,-6.5,0,26.5" Style="{ThemeResource HeaderTextBlockStyle}" CharacterSpacing="{ThemeResource PivotHeaderItemCharacterSpacing}"/>
+            <TextBlock Text="Currencies" Margin="0,-6.5,0,26.5" Style="{ThemeResource HeaderTextBlockStyle}" CharacterSpacing="{ThemeResource PivotHeaderItemCharacterSpacing}"/>
         </StackPanel>
 
         <!-- Popup Content -->
 
-        <Popup Name="PopAdd" Grid.Row="0" Grid.RowSpan="2" IsOpen="{Binding IsOpen, Mode=TwoWay}">
-          <StackPanel MinWidth="400" Background="Gray">
+        <Popup Name="PopAddNewCurrency" Grid.Row="0" Grid.RowSpan="2" IsOpen="True">
+            <StackPanel MinWidth="400"  Background="Gray">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition></ColumnDefinition>
@@ -61,18 +55,22 @@
                         <RowDefinition Height="*"></RowDefinition>
                         <RowDefinition Height="*"></RowDefinition>
                         <RowDefinition Height="*"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
                     </Grid.RowDefinitions>
-          
 
-                    <TextBlock  Grid.Row="0" Grid.ColumnSpan="2" Name="TxbCategory" HorizontalAlignment="Center" Text="Please enter the category name" FontSize="16">
-                     </TextBlock>
-                    <TextBox Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Name="TbxCategory" VerticalAlignment="Center" Margin="15" Text="{Binding CategoryName, Mode=TwoWay}"></TextBox>
-                    <Button Content="Add" HorizontalAlignment="Center" Grid.Row="2" Grid.Column="0" Name="BtnOk" Command="{Binding AddExpenseCategory, Mode=TwoWay}"></Button>
-                    <Button Content="Close" HorizontalAlignment="Center" Grid.Row="2" Grid.Column="1"  Name="BtnCancel" Command="{Binding ClosePopup}" ></Button>
+                    <TextBlock Grid.Row="0" Grid.ColumnSpan="2" Name="TxbCategory" HorizontalAlignment="Center" Text="Please enter the currency name" FontSize="16"></TextBlock>
+                    <TextBox  Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Name="TbxCurrencyName" Text="{Binding CategoryName, Mode=TwoWay}" VerticalAlignment="Center" Margin="15"></TextBox>
+                    <TextBlock Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Name="TxbSymbol" HorizontalAlignment="Center" Text="Please enter the currency symbol"></TextBlock>
+                    <TextBox  Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Name="TbxCurrencySymbol" Text="{Binding CategoryName, Mode=TwoWay}" VerticalAlignment="Center" Margin="15"></TextBox>
+                    <Button Content="Add" HorizontalAlignment="Center" Grid.Row="4" Grid.Column="0" Name="BtnOk" Command="{Binding AddIncomeCategory, Mode=TwoWay}"></Button>
+                    <Button Content="Close" HorizontalAlignment="Center" Grid.Row="4" Grid.Column="1"  Name="BtnCancel"  Command="{Binding ClosePopup}" ></Button>
 
                 </Grid>
             </StackPanel>
         </Popup>
+
+
 
         <!-- Main Content -->
         <StackPanel Grid.Row="1" HorizontalAlignment="Stretch">
@@ -80,22 +78,21 @@
         </StackPanel>
 
         <Grid Grid.Row="2" x:Name="ContentRoot" Margin="19,9.5,19,0">
-            <ListView x:Name="LsvCategories" ItemsSource="{Binding ExpenseCategories, Mode=TwoWay}" ScrollViewer.VerticalScrollMode="Enabled">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <Grid>
-                            
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="40"></ColumnDefinition>
-                                <ColumnDefinition Width="Auto"></ColumnDefinition>
-                            </Grid.ColumnDefinitions>
-                            <CheckBox Grid.Column="0" Name="chbCategoryName" Visibility="{Binding Path=DataContext.IsDeleteMode, Converter={StaticResource BooleanToVisibilityConverter}, ElementName=ContentRoot}"  Command="{Binding Path=DataContext.DeleteCategoryCommand, ElementName=ContentRoot }" CommandParameter="{Binding CategoryId}"></CheckBox>
-                            <TextBlock Grid.Column="1" Margin="0, 10, 0, 0" Name="txbCateoryName" Text="{Binding Name}" FontSize="24" ></TextBlock>
-                         
-                         </Grid>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
+
+            <Grid>
+                <ComboBox ItemsSource="{Binding Currencies}">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock  Margin="0, 10, 0, 0" Name="txbCurrencyName" Text="{Binding Name}" FontSize="24" ></TextBlock>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
+
+
+                
+
+            </Grid>
+
         </Grid>
     </Grid>
 </Page>
