--- a/FinanceManager/App.xaml
+++ b/FinanceManager/App.xaml
@@ -1,12 +1,10 @@
-﻿<Application
-    x:Class="FinanceManager.App"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-
-    xmlns:viewModel="using:FinanceManager.ViewModel">
-    
-    <Application.Resources>
-        <viewModel:ViewModelLocator x:Key="ViewModelLocator"/>
-    </Application.Resources>
-
+﻿<Application x:Class="FinanceManager.App" 
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
+             xmlns:local="using:FinanceManager" 
+             xmlns:infrastructure="using:FinanceManager.Infrastructure"
+             xmlns:viewModels="using:FinanceManager.ViewModel"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             d1p1:Ignorable="d" 
+             xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006">
 </Application>
